Fixed text align

--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,6 @@ header {
 .phoneContainer {
     display: flex;
     align-items: center;
-    margin-left: 520px;
     margin-top: 20px;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -159,7 +158,7 @@ header {
 .phoneImage {
     width: 4%;
     height: 4%;
-    margin-right: 20px;
+    margin-right: 2%;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -172,6 +171,7 @@ header {
     font-family: "Montserrat", sans-serif;
     cursor: pointer;
     font-size: 20px;
+    text-align: center;
     transition: all 0.3s ease 0s;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -185,7 +185,6 @@ header {
 .backupPhoneContainer {
     display: flex;
     align-items: center;
-    margin-left: 520px;
     margin-top: 20px;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -208,6 +207,7 @@ header {
     font-family: "Montserrat", sans-serif;
     cursor: pointer;
     font-size: 20px;
+    text-align: center;
     transition: all 0.3s ease 0s;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -221,7 +221,6 @@ header {
 .emailContainer {
     display: flex;
     align-items: center;
-    margin-left: 460px;
     margin-top: 10px;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -244,6 +243,7 @@ header {
     font-size: 20px;
     margin-left: 10px;
     transition: all 0.3s ease 0s;
+    text-align: center;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
